# otus_rl_project

./: .dockerignore  .gitignore  Makefile  README.md  REPORT.md  pyproject.toml
assets/: README.md
docker/: Dockerfile  compose.yaml
docs/: algorithm_comparison_roadmap.md
docs/results/: comparison_report.md
docs/results/csv/: amp__Eval_action_smoothness.csv  amp__Eval_action_smoothness_obs_noise.csv  amp__Eval_action_smoothness_push_15N.csv  amp__Eval_action_smoothness_push_5N.csv  amp__Eval_base_height_std.csv  amp__Eval_base_height_std_obs_noise.csv  amp__Eval_base_height_std_push_15N.csv  amp__Eval_base_height_std_push_5N.csv  amp__Eval_episode_length_push_15N.csv  amp__Eval_foot_slippage.csv  amp__Eval_foot_slippage_obs_noise.csv  amp__Eval_foot_slippage_push_15N.csv  amp__Eval_foot_slippage_push_5N.csv  amp__Eval_torque_cost.csv  amp__Eval_torque_cost_obs_noise.csv  amp__Eval_torque_cost_push_15N.csv  amp__Eval_torque_cost_push_5N.csv  amp__Eval_vel_error_obs_noise.csv  amp__Eval_vel_error_push_15N.csv  amp__Eval_vel_error_push_5N.csv  amp__Eval_velocity_tracking_error_xy.csv  amp__Eval_yaw_tracking_error.csv  amp__Eval_yaw_tracking_error_obs_noise.csv  amp__Eval_yaw_tracking_error_push_15N.csv  amp__Eval_yaw_tracking_error_push_5N.csv  ars__Eval_action_smoothness.csv  ars__Eval_action_smoothness_obs_noise.csv  ars__Eval_torque_cost.csv  (+46 more)
scripts/: acrobatics_orchestrator.sh  analyze_motion.py  day_orchestrator.sh  night_acro_orchestrator.sh  night_compare_orchestrator.sh  night_orchestrator.sh  openhe_pkl_to_csv.py  setup_assets.sh  stop_cartwheel_at_3000.sh  trim_motion.py
src/otus_rl_project/: __init__.py
(+41 files in other folders)
